--- a/style.scss
+++ b/style.scss
@@ -1,10 +1,8 @@
-html { background: black 
-    url("6a229c0b44e287eaf176e3cada7e77c9--cool-backgrounds-abstract-backgrounds.jpg") 
-    center center no-repeat; background-size: cover; color: white;}
+html { background: black center center no-repeat; background-size: cover; color: white;}
 body {display: block; place-items: center; margin: 0; 
     font-family: Inter, Helvetica, Arial, sans-serif; font-size: 24px; line-height: 1.5em;
     @media (min-width: 500px) { display:grid; }
-} 
+}
 
 
 .Container {color:rgb(58, 6, 107);  background:rgb(79, 109, 245, 0.8);padding: 1rem; ;
